@@ -1,3 +1,4 @@
+* Add sequence_nextval function to Database
 * Retrieve groups of actions without checking access (#13506)
 * Check read access of report records (#13505)
 * Forbid editing cron when it is running
